# KnowledgeBaseHoss

./: .dockerignore  .env.example  Dockerfile  README.md  main.py  pyproject.toml
app/: audit.py  config.py  database.py  models.py  permissions.py  rag.py  search.py  storage.py  templating.py  valkey_client.py
app/auth/: deps.py  router.py  utils.py
app/chat/: router.py
app/departments/: router.py
app/documents/: router.py
app/logs/: router.py
app/messaging/: router.py
app/notifications/: router.py
app/projects/: router.py
app/reports/: router.py
app/tasks/: router.py
app/templates/: base.html  home.html  login.html  profile.html  register.html  setup_totp.html  totp_verify.html
app/templates/chat/: _response.html  _widget_response.html
app/templates/departments/: list.html
app/templates/documents/: edit.html  list.html  upload.html
app/templates/logs/: audit.html  searches.html
app/templates/messaging/: _feed.html  index.html
app/templates/projects/: detail.html  list.html
app/templates/reports/: dashboard.html
app/templates/tasks/: _comment.html  detail.html  list.html
app/templates/users/: list.html
app/templates/zones/: list.html
app/users/: router.py
app/zones/: router.py
migrations/: env.py
migrations/versions/: 001_initial.py  002_avatar_key.py  003_audit_search_logs.py  004_org_communication_tasks.py  005_task_evidences.py  006_message_attachments.py
