[project]
name = "knowledge"
version = "0.1.0"
description = "Base de Conocimiento"
authors = [
  {name = "Brian Adrian Dorantes Salazar", email = "briandorantes@hotmail.com"},
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.5",
    "boto3>=1.43.46",
    "fastapi[standard]>=0.139.0",
    "itsdangerous>=2.1.0",
    "jinja2>=3.1.6",
    "markitdown>=0.1.0",
    "openai>=2.45.0",
    "opensearch-py>=3.2.0",
    "argon2-cffi>=23.1.0",
    "pillow>=12.3.0",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.0.0",
    "pyotp>=2.10.0",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.3.0",
    "qrcode>=8.2",
    "slowapi>=0.1.10",
    "sqlalchemy>=2.0.51",
    "redis>=8.0.1",
    "pypdf>=6.14.2",
    "voyageai>=0.5.0",
    "livekit-api>=0.7.0",
]
